Created stage loaders in SSIS package

--- a/config/us.config
+++ b/config/us.config
@@ -13,7 +13,7 @@ candidate_location_code_type=1015
 candidate_qualification_code_type=1025,1020
 candidate_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1055
 candidate_tracking_consultant_code_type=1055
-client_contact_role_type=C1
+job_contact_role_type=C1
 client_employer_only_record_status_code=Y
 client_industry_code_type=1005
 client_location_code_type=1015
@@ -42,3 +42,17 @@ journal_send_email_type=KE01,P05,KA2
 journal_call_made_log_type=P11,KD2
 journal_client_visit_type=P14
 journal_internal_interview_arranged_type=Q13,Q15
+shortlist_cv_event_type=KE03,Q21
+shortlist_interview_event_type=Q31,Q32,Q33,Q34,Q35,Q36
+shortlist_offer_event_type=F,H
+shortlist_shortlisted_event_type=A
+interview_external_event_type=Q31,Q32,Q33,Q34,Q35,Q36
+interview_internal_event_type=Q13,Q15
+event_role_candidate_type=A,1,D,F,H,K
+event_role_contact_type=C1
+event_role_consultant_type=U1
+perm_assign_perm_offer_event_type=F
+perm_assign_perm_fee_event_type=1PA
+perm_assign_placed_event_outcome=F3
+perm_assign_deleted_event_outcome=DEL
+
