Add main entity task to SSIS package

--- a/config/us.config
+++ b/config/us.config
@@ -1,4 +1,5 @@
-teams=BKCH,CMCH,CMIC,MSCH,PSCH,DUMMY,SITL,SLEM,VDPL
+teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,MSBS,PSBS,SBBS,SOBS
+team_locations=NMAB,NMAC,NMAM,NMAN,NME
 zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migration\bin\7za.exe
 csv_file_path=C:\Documents and Settings\davesexton\Desktop\migration\
 csv_file_pathx=s:\mig\
