--- a/config/us.config
+++ b/config/us.config
@@ -2,6 +2,7 @@ teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,MSBS,PSBS,SBBS,SOBS
 team_locations=NMAB,NMAC,NMAM,NMAN,NME
 zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migration\bin\7za.exe
 csv_file_path=C:\Documents and Settings\davesexton\Desktop\migration\
+linkfile_path=P:\p7nalive\Linkfile\
 csv_file_pathx=s:\mig\
 migration_team=XXXX
 migration_user=0
@@ -27,7 +28,7 @@ contact_tracking_consultant_code_type=1055
 contact_record_status_code=C
 contact_contact_status_code=2,3,6
 job_close_reason_type=X2,X3,X4
-job_comprtitor_type=X3
+job_competitor_type=X3
 job_contact_fee_event_type=1FA
 job_contract_type=E
 job_education_code_type=1020
@@ -36,7 +37,7 @@ job_job_category_code_type=1000
 job_lead_record_status_code=L1
 job_location_code_type=1015
 job_perm_type=C,CR
-job_qualification_code_type=1025,1020
+job_qualification_code_type=1020,1025
 job_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1008,1036,1039,1041,1030
 journal_general_event_type=Q11,Q14,P15,KA1,G,P13
 journal_send_email_event_type=KE01,P05,KA2
