Added extra document logic

--- a/config/us.config
+++ b/config/us.config
@@ -1,9 +1,8 @@
 teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,MSBS,PSBS,SBBS,SOBS
 team_locations=NMAB,NMAC,NMAM,NMAN,NME
 zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migration\bin\7za.exe
-csv_file_path=C:\Documents and Settings\davesexton\Desktop\migration\
 linkfile_path=P:\p7nalive\Linkfile\
-csv_file_pathx=s:\mig\
+csv_file_path=C:\Projects\git\mpi_profile_migration\automation\migration_csvs\
 migration_team=XXXX
 migration_user=0
 candidate_education_code_type=1020
@@ -51,8 +50,8 @@ shortlist_shortlisted_event_type=A
 interview_external_event_type=Q31,Q32,Q33,Q34,Q35,Q36
 interview_internal_event_type=Q13,Q15
 event_role_candidate_type=A,1,D,F,H,K
-event_role_contact_type=C1
-event_role_consultant_type=U1
+event_role_contact_type=C1,C2
+event_role_consultant_type=U1,UC1
 perm_assign_perm_offer_event_type=F
 perm_assign_perm_fee_event_type=1PA
 perm_assign_placed_event_outcome=F3
