migration and copy data all issues fixed

--- a/config/us.config
+++ b/config/us.config
@@ -1,5 +1,5 @@
-teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,MSBS,PSBS,SBBS,SOBS
-team_locations=NMAB,NMAC,NMAM,NMAN,NME
+teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,LSBS,MSBS,PSBS,SBBS,SOBS
+team_locations=NMAB,NMAC,NMAM,NMAN,NME,AS
 zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migration\bin\7za.exe
 linkfile_path=P:\p7nalive\Linkfile\
 csv_file_path=C:\Projects\git\mpi_profile_migration\automation\migration_csvs\
@@ -18,6 +18,7 @@ job_contact_role_type=C1
 client_employer_only_record_status_code=Y
 client_industry_code_type=1005
 client_location_code_type=1015
+client_tracking_consultant_code_type=1055
 contact_industry_code_type=1005
 contact_job_category_code_type=1000
 contact_location_code_type=1015
@@ -49,7 +50,7 @@ shortlist_offer_event_type=F,H
 shortlist_shortlisted_event_type=A
 interview_external_event_type=Q31,Q32,Q33,Q34,Q35,Q36
 interview_internal_event_type=Q13,Q15
-event_role_candidate_type=A,1,D,F,H,K
+event_role_candidate_type=A1,1,D,F,H,K
 event_role_contact_type=C1,C2
 event_role_consultant_type=U1,UC1
 perm_assign_perm_offer_event_type=F
