copydata tweaks and 50% completed making the migration dynamic

--- a/config/us.config
+++ b/config/us.config
@@ -5,6 +5,10 @@ linkfile_path=P:\p7nalive\Linkfile\
 csv_file_path=C:\Projects\git\mpi_profile_migration\automation\migration_csvs\
 migration_team=XXXX
 migration_user=0
+candidate_document_type=WPC4,WPC5,WPC6,WPC7,WPC8,WPCO,WPC1,WPC2,WPC3
+candidate_orginal_cv_type=WPC1
+job_web_advert_type=HTJA
+contact_document_type=WCON,PPT,Y,WDOC,XLS,WSIG,Y12,Y13
 candidate_education_code_type=1020
 candidate_hot_code_type=2080
 candidate_hot_code=01
