--- a/config/us.config
+++ b/config/us.config
@@ -1,39 +1,51 @@
-teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,LSBS,MSBS,PSBS,SBBS,SOBS
-team_locations=NMAB,NMAC,NMAM,NMAN,NME,AS
-zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migration\bin\7za.exe
-linkfile_path=P:\p7nalive\Linkfile\
-csv_file_path=C:\Projects\git\mpi_profile_migration\automation\migration_csvs\
-migration_team=XXXX
-migration_user=0
 candidate_document_type=WPC4,WPC5,WPC6,WPC7,WPC8,WPCO,WPC1,WPC2,WPC3
-candidate_orginal_cv_type=WPC1
-job_web_advert_type=HTJA
-contact_document_type=WCON,PPT,Y,WDOC,XLS,WSIG,Y12,Y13
 candidate_education_code_type=1020
-candidate_hot_code_type=2080
 candidate_hot_code=01
+candidate_hot_code_type=2080
 candidate_industry_code_type=1005
 candidate_job_category_code_type=1000
 candidate_location_code_type=1015
+candidate_orginal_cv_type=WPC1
 candidate_qualification_code_type=1025,1020
 candidate_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1030,1055
 candidate_tracking_consultant_code_type=1055
-job_contact_role_type=C1
 client_employer_only_record_status_code=Y
 client_industry_code_type=1005
 client_location_code_type=1015
 client_tracking_consultant_code_type=1055
+contact_contact_status_code=2,3,6
+contact_document_type=WCON,PPT,Y,WDOC,XLS,WSIG,Y12,Y13
 contact_industry_code_type=1005
 contact_job_category_code_type=1000
 contact_location_code_type=1015
+contact_record_status_code=C
 contact_role_code_type=1045
 contact_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1055
 contact_tracking_consultant_code_type=1055
-contact_record_status_code=C
-contact_contact_status_code=2,3,6
+csv_file_path=C:\Projects\git\mpi_profile_migration\automation\migration_csvs\
+event_accepted_offer_outcome=F3
+event_call_made_log_type=P11,KD2
+event_client_visit_type=P14
+event_cv_type=KE03,Q21
+event_deleted_outcome=DEL
+event_external_interview_type=Q31,Q32,Q33,Q34,Q35,Q36
+event_general_journal_type=Q11,Q14,P15,KA1,G,P13
+event_internal_interview_type=Q13,Q15
+event_no_further_action_outcome=A4
+event_perm_fee_type=1PA
+event_perm_offer_type=F
+event_placed_outcome=F3
+event_rejected_offer_outcome=F1
+event_role_candidate_type=A1,1,D,F,H,K
+event_role_consultant_type=U1,UC1
+event_role_contact_type=C1,C2
+event_send_email_type=KE01,P05,KA2
+event_shortlisted_type=A
+event_temp_booking_type=H
 job_close_reason_type=X2,X3,X4
 job_competitor_type=X3
 job_contact_fee_event_type=1FA
+job_contact_role_type=C1
 job_contract_type=E
 job_education_code_type=1020
 job_industry_code_type=1005
@@ -43,22 +55,10 @@ job_location_code_type=1015
 job_perm_type=C,CR
 job_qualification_code_type=1020,1025
 job_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1008,1036,1039,1041,1030
-journal_general_event_type=Q11,Q14,P15,KA1,G,P13
-journal_send_email_event_type=KE01,P05,KA2
-journal_call_made_log_event_type=P11,KD2
-journal_client_visit_event_type=P14
-journal_internal_interview_arranged_event_type=Q13,Q15
-shortlist_cv_event_type=KE03,Q21
-shortlist_interview_event_type=Q31,Q32,Q33,Q34,Q35,Q36
-shortlist_offer_event_type=F,H
-shortlist_shortlisted_event_type=A
-interview_external_event_type=Q31,Q32,Q33,Q34,Q35,Q36
-interview_internal_event_type=Q13,Q15
-event_role_candidate_type=A1,1,D,F,H,K
-event_role_contact_type=C1,C2
-event_role_consultant_type=U1,UC1
-perm_assign_perm_offer_event_type=F
-perm_assign_perm_fee_event_type=1PA
-perm_assign_placed_event_outcome=F3
-perm_assign_deleted_event_outcome=DEL
-
+job_web_advert_type=HTJA
+linkfile_path=P:\p7nalive\Linkfile\
+migration_team=XXXX
+migration_user=0
+team_locations=NMAB,NMAC,NMAM,NMAN,NME,AS
+teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,LSBS,MSBS,PSBS,SBBS,SOBS
+zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migratio\bin\7za.exe
