Fixed issues raised by Pandora

--- a/config/us.config
+++ b/config/us.config
@@ -38,7 +38,7 @@ event_placed_outcome=F3
 event_rejected_offer_outcome=F1
 event_role_candidate_type=A1,1,D,F,H,K
 event_role_consultant_type=U1,UC1
-event_role_contact_type=C1,C2
+event_role_contact_type=C1
 event_send_email_type=KE01,P05,KA2
 event_shortlisted_type=A
 event_temp_booking_type=H
