Optimised for speed

--- a/config/us.config
+++ b/config/us.config
@@ -56,9 +56,11 @@ job_perm_type=C,CR
 job_qualification_code_type=1020,1025
 job_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1008,1036,1039,1041,1030
 job_web_advert_type=HTJA
-linkfile_path=P:\p7nalive\Linkfile\
+linkfile_path=X:\Linkfile\
 migration_team=XXXX
 migration_user=0
 team_locations=NMAB,NMAC,NMAM,NMAN,NME,AS
 teams=BKB2,BKBI,BKBS,CMBS,CMIB,ENBS,LSBS,MSBS,PSBS,SBBS,SOBS
 zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migratio\bin\7za.exe
+legal_entity_document_description=PSA
+legal_entity_document_type=WPSA
