added fixes for v1.0 schema

--- a/config/us.config
+++ b/config/us.config
@@ -7,7 +7,8 @@ candidate_job_category_code_type=1000
 candidate_location_code_type=1015
 candidate_orginal_cv_type=WPC1
 candidate_qualification_code_type=1025,1020
-candidate_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1030,1055
+candidate_skill_code_type=1030
+candidate_job_group_code_type=1007,1010,1011,1012,1014,1016,1017,1018
 candidate_tracking_consultant_code_type=1055
 client_employer_only_record_status_code=Y
 client_industry_code_type=1005
@@ -20,7 +21,7 @@ contact_job_category_code_type=1000
 contact_location_code_type=1015
 contact_record_status_code=C
 contact_role_code_type=1045
-contact_skill_code_type=1007,1010,1011,1012,1014,1016,1017,1018,1055
+contact_job_group_code_type=1007,1010,1011,1012,1014,1016,1017,1018
 contact_tracking_consultant_code_type=1055
 csv_file_path=C:\Projects\git\mpi_profile_migration\automation\migration_csvs\
 event_accepted_offer_outcome=F3
