Fixed PSA and MSG documents

--- a/config/us.config
+++ b/config/us.config
@@ -65,5 +65,5 @@ linkfile_path=X:\Linkfile\
 migration_team=XXXX
 migration_user=0
 zip_exe_path=C:\Documents and Settings\davesexton\Desktop\migratio\bin\7za.exe
-legal_entity_document_description=PSA
+legal_entity_document_description=P%S%A
 legal_entity_document_type=WPSA
